# $Id$
# This file is part of GNU RADIUS.
# Copyright (C) 2000,2001, Sergey Poznyakoff
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

EXTRA_DIST = \
 rfc1157.txt\
 rfc1448.txt\
 rfc1901.txt\
 rfc1905.txt\
 rfc2138.txt\
 rfc2618.txt\
 rfc2619.txt\
 rfc2620.txt\
 rfc2621.txt\
 rfc2865.txt\
 rfc2866.txt\
 rfc2867.txt\
 rfc2868.txt\
 rfc2869.txt\
 rfc2882.txt
