# This file is part of GNU RADIUS.
# Copyright (C) 2000,2001, Sergey Poznyakoff
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

EXTRA_DIST = \
 access.deny\
 auth.bin\
 auth.scm\
 checkrad.conf\
 clients\
 client.conf.in\
 config.in\
 dictionary\
 dictionary.ascend\
 dictionary.cisco\
 dictionary.compat\
 dictionary.livingston\
 dictionary.merit\
 dictionary.tunnel\
 dictionary.usr\
 dictionary.voip\
 hints\
 huntgroups\
 menus/menu1\
 menus/menu2\
 naslist\
 nastypes\
 realms\
 rewrite\
 sqlserver\
 users.in
